Added a default value for bgp templates

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -9,3 +9,4 @@ bird::conf_path: /etc/bird.conf
 bird::confd_path: /etc/bird.d
 bird::router_id: "%{::facts.networking.ip}"
 bird::protocols::bgp: {}
+bird::templates::bgp: {}
