--- a/spec/default_facts.yml
+++ b/spec/default_facts.yml
@@ -6,3 +6,5 @@ concat_basedir: "/tmp"
 ipaddress: "172.16.254.254"
 is_pe: false
 macaddress: "AA:AA:AA:AA:AA:AA"
+networking:
+  ip: "172.16.254.254"
